fix styling and z-index issues with modals

--- a/src/index.css
+++ b/src/index.css
@@ -74,3 +74,7 @@ label:hover {
     line-clamp: 3;
     -webkit-box-orient: vertical;
 }
+
+.hs-overlay-backdrop {
+    z-index: unset;
+}
